# automata

./: CMakeLists.txt  head.c  head.h  run.c  tester.c  validator.c
